--- a/bookstore-frontend/src/components/book/SingleBook.css
+++ b/bookstore-frontend/src/components/book/SingleBook.css
@@ -39,4 +39,11 @@
     padding: 1em;
     width: 20em;
     border-radius: 1em;
+    margin-left: 2em;
+    margin-right: 2em;
+    text-align: center;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
 }
